fix: display spacing

--- a/_dev/src/scss/components/_logs.scss
+++ b/_dev/src/scss/components/_logs.scss
@@ -119,6 +119,10 @@ $e-logs: ".logs";
       display: flex;
       flex-direction: column;
       gap: 1rem;
+
+      &:empty {
+        display: none;
+      }
     }
 
     &__summary {
